[package]
name = "concatener"
version = "0.1.0"
edition = "2024"
description = "A fast command-line tool for concatenating multiple files"
license = "MIT"
repository = "https://github.com/cederig/concatener"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
anyhow = "1.0"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3.23"
